# Unkn0wnC2

./: .gitignore  BUILD.md  DEPLOYMENT.md  PRODUCTION_QUICKSTART.md  README.md  STAGER_UI_DIAGNOSTIC.md  TESTING_DYNAMIC_DNS.md  TTPS.md  build.bat  build.sh  build_config.distributed.example.json  build_config.json  build_new.sh  build_production.sh  test_stager_workflow.md
.github/: copilot-instructions.md
Archon/: api.go  builder.go  config.go  db.go  db_exfil.go  db_exfil_test.go  go.mod  go.sum  logger.go  main.go  websocket.go
Client/: .gitignore  build.sh  build_config.json  client_test.go  config.go  config.json  crypto.go  dns_client.go  go.mod  main.go  raw_dns.go  types.go
Master/: README.md  api.go  builder.go  config.go  db.go  go.mod  main.go  master_config.example.json
New_Client/: build.bat  crypto.go  dns_client.go  go.mod
Server/: c2_manager.go  config.go  config.json  console.go  constants.go  crypto.go  db.go  dns.go  go.mod  go.sum  logger.go  main.go  master_client.go  parse.go  serialize.go  server_test.go
Stager/: .gitignore  Makefile  README.md  build.sh  stager.c  test_encode  test_encode.c
assets/: ascii-art.txt  info_ed.excalidraw
docs/: 09-dns-message-formats.md  BUG_FIXES_2025-11-06_PART2.md  BUILD_CONFIG_GENERATION.md  DNS_COMMUNICATIONS_ANALYSIS.md  DNS_MANAGEMENT_COMPLETION_SUMMARY.md  DNS_SERVER_MANAGEMENT.md  DNS_VERIFICATION_SUMMARY.md  DNS_WORKFLOW_DIAGRAMS.md  (+6 more)
exfil-client/: Cargo.toml  README.md
exfil-client/src/: base36.rs  chunker.rs  config.rs  crypto.rs  dns.rs  limits.rs  main.rs  metadata.rs  resolver.rs
(+26 files in other folders)
