[package]
name = "exfil-client"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
base64 = "0.21"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
once_cell = "1.19"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
trust-dns-proto = "0.23"
